@startuml
'https://plantuml.com/class-diagram

package common {
    abstract class BasicEntity {
        UUID id
        Instant created
        Instant updated
    }
}

package patient {
    class PatientEntity
}

package address {
    class AddressEntity
}

package doctor {
    class DoctorEntity
    class MedicalLicenseEntity
}

package procedure {
    class MedicalProcedureEntity
}

PatientEntity --|> BasicEntity
AddressEntity --|> BasicEntity

DoctorEntity --|> BasicEntity
MedicalLicenseEntity --|> BasicEntity

MedicalProcedureEntity --|> BasicEntity

@enduml
